fix: blurred background sizing (#24)

--- a/src/components/SceneCard/Preview/Preview.scss
+++ b/src/components/SceneCard/Preview/Preview.scss
@@ -5,6 +5,7 @@
 
   &.blurredBackground {
     background-position: center;
+    background-size: cover;
 
     .scene-card-preview-image {
       backdrop-filter: var(--#{$prefix}-preview-background-backdrop-filter);
